# jarvis

./: .env.example  .gitignore  README.md  asteroids.html  chat.html  config.py  login.ps1  login.sh  main.py  package.sh  pinball.css  pinball.html  pinball.js  requirements.txt  setup.sh  start.sh  test_chat_command.py  test_dm_bot.py  test_game_windows.py  tetris.html
jarvis-rs/crates/jarvis-ai/: Cargo.toml
jarvis-rs/crates/jarvis-ai/src/: claude.rs  gemini.rs  lib.rs  router.rs  session.rs  streaming.rs  token_tracker.rs  tools.rs  whisper.rs
jarvis-rs/crates/jarvis-ai/src/claude/: api.rs  client.rs  config.rs  mod.rs
jarvis-rs/crates/jarvis-ai/src/gemini/: api.rs  client.rs  config.rs  mod.rs
jarvis-rs/crates/jarvis-ai/src/session/: chat.rs  manager.rs  mod.rs  types.rs
jarvis-rs/crates/jarvis-ai/src/tools/: definitions.rs  mod.rs  sandbox.rs
jarvis-rs/crates/jarvis-config/: Cargo.toml
jarvis-rs/crates/jarvis-config/src/: colors.rs  keybinds.rs  lib.rs  reload.rs  schema.rs  theme.rs  toml_loader.rs  toml_writer.rs  validation.rs  watcher.rs
jarvis-rs/crates/jarvis-config/src/colors/: mod.rs  parse.rs  tests.rs
jarvis-rs/crates/jarvis-config/src/reload/: manager.rs  mod.rs  tests.rs
jarvis-rs/crates/jarvis-config/src/schema/: auto_open.rs  background.rs  effects.rs  font.rs  games.rs  keybind_config.rs  layout.rs  livechat.rs  mod.rs  panels.rs  performance.rs  relay.rs  shell.rs  social.rs  startup.rs  status_bar.rs  system.rs  terminal.rs  theme.rs  visualizer.rs  voice.rs  window.rs
jarvis-rs/crates/jarvis-config/src/theme/: apply.rs  loader.rs  mod.rs  types.rs
jarvis-rs/crates/jarvis-config/src/toml_loader/: loader.rs  mod.rs  paths.rs  template.rs  tests.rs
jarvis-rs/crates/jarvis-config/src/validation/: background.rs  font.rs  helpers.rs  layout.rs  misc.rs  mod.rs  opacity.rs  tests.rs  visualizer.rs  visualizer_effects.rs
jarvis-rs/crates/jarvis-config/src/watcher/: config_watcher.rs  mod.rs  tests.rs
jarvis-rs/crates/jarvis-platform/: Cargo.toml
jarvis-rs/crates/jarvis-platform/src/: clipboard.rs  crash_report.rs  crypto.rs  input.rs  input_processor.rs  keymap.rs  lib.rs  mouse.rs  notifications.rs  paths.rs  winit_keys.rs
jarvis-rs/crates/jarvis-platform/src/crash_report/: mod.rs  report.rs  sanitize.rs
jarvis-rs/crates/jarvis-platform/src/input/: key_combo.rs  mod.rs  registry.rs
jarvis-rs/crates/jarvis-platform/src/input_processor/: encoding.rs  mod.rs  processor.rs  types.rs
jarvis-rs/crates/jarvis-platform/src/keymap/: display.rs  mod.rs  parse.rs  types.rs
jarvis-rs/crates/jarvis-platform/src/paths/: ensure.rs  mod.rs  resolve.rs
jarvis-rs/crates/jarvis-renderer/: Cargo.toml
jarvis-rs/crates/jarvis-renderer/src/: assistant_panel.rs  atlas.rs  background.rs  command_palette.rs  effects.rs  gpu.rs  lib.rs  perf.rs  quad.rs  render_state.rs  text.rs  ui.rs
jarvis-rs/crates/jarvis-renderer/src/background/: helpers.rs  mod.rs  pipeline.rs  renderer.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/bloom/: mod.rs  pipeline.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/boot_screen/: mod.rs  text.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/command_palette/: mod.rs  palette.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/effects/: mod.rs  renderer.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/gpu/: context.rs  mod.rs  types.rs  uniforms.rs
jarvis-rs/crates/jarvis-renderer/src/quad/: mod.rs  pipeline.rs  renderer.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/render_state/: chrome_text.rs  composite.rs  frame.rs  frame_multi.rs  helpers.rs  mod.rs  orb.rs  state.rs
jarvis-rs/crates/jarvis-renderer/src/shaders/: background.wgsl  bloom.wgsl  boot.wgsl  composite.wgsl  effects.wgsl  sphere.wgsl  text.wgsl
jarvis-rs/crates/jarvis-renderer/src/sphere/: matrix.rs  mesh.rs  mod.rs  pipeline.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/text/: colors.rs  helpers.rs  mod.rs  prepare.rs  renderer.rs
jarvis-rs/crates/jarvis-renderer/src/ui/: chrome.rs  (+3 more)
jarvis-rs/crates/jarvis-social/: Cargo.toml
jarvis-rs/crates/jarvis-social/src/: channels.rs  chat.rs  identity.rs  lib.rs  pair.rs  presence.rs  protocol.rs  realtime.rs  screen_share.rs  voice.rs
jarvis-rs/crates/jarvis-terminal/: Cargo.toml
jarvis-rs/crates/jarvis-terminal/src/: event.rs  grid.rs  lib.rs  pty.rs  scrollback.rs  search.rs  selection.rs  shell.rs  size.rs  tests.rs  vte_handler.rs
(+254 files in other folders)
