[package]
name = "jarvis-config"
version.workspace = true
edition.workspace = true

[dependencies]
jarvis-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
