[package]
name = "jarvis-platform"
version.workspace = true
edition.workspace = true

[dependencies]
jarvis-common = { workspace = true }
jarvis-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
arboard = "3"
