[package]
name = "jarvis-platform"
version.workspace = true
edition.workspace = true

[dependencies]
jarvis-common = { workspace = true }
jarvis-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
arboard = "3"
p256 = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
