[package]
name = "jarvis-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
jarvis-common = { workspace = true }
jarvis-config = { workspace = true }
jarvis-platform = { workspace = true }
jarvis-terminal = { workspace = true }
wgpu = "24"
glyphon = "0.8"
cosmic-text = "0.12"
winit = "0.30"
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
