[package]
name = "jarvis-social"
version.workspace = true
edition.workspace = true

[features]
default = []
## Enables voice chat, screen sharing, and pair programming.
## These features have no authentication yet — do NOT enable in production.
experimental-collab = []

[dependencies]
jarvis-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
